# async-object

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: release.yml
.github/workflows/: test.yml
src/async_object/: __init__.py
src/async_object/contrib/mypy/: __init__.py  plugin.py
src/async_object/linting/: __init__.py  mypy.py
tests/: test_instance.py  test_metaclass.py
